fix: correct padding and alignment issues

--- a/styles/case-study-layout.css
+++ b/styles/case-study-layout.css
@@ -150,11 +150,11 @@ footer .details * {
   }
   
   footer nav {
-    grid-column: 2 / 5;
+    grid-column: 2 / span 1;
   }
   
   footer .details {
-    grid-column: 5 / -2;
+    grid-column: 3 / -2;
   }
   
 }
@@ -222,11 +222,11 @@ footer .details * {
   }
   
   footer nav {
-    grid-column: 3 / 7;
+    grid-column: 3 / span 1;
   }
   
   footer .details {
-    grid-column: 7 / -2;
+    grid-column: 4 / -2;
   }
   
 }
@@ -265,12 +265,12 @@ footer .details * {
     grid-column: 10 / span 8;
   }
   
-  footer .details {
-    grid-column: 10 / -4;
+  footer nav {
+    grid-column: 5 / span 1;
   }
   
-  footer nav {
-    grid-column: 5 / span 4;
+  footer .details {
+    grid-column: 6 / -4;
   }
   
 }
